@@ -4,6 +4,9 @@ Changelog
 HEAD
 ~~~~
 
+- Split out compile-function such that we can always write the source
+  code to disk in debug-mode. [malthe]
+
 - Correctly transfer scope to callback-function that will fill macro
   slot contents. Previously, we would precompute fill-slots, but this
   was wrong since it's expected to inherit the scope of the macro
